2005-03-30  Tor Lillqvist  <tml@novell.com>

	* gdk/win32/gdkevents-win32.c (build_pointer_event_state): The
	state field should represent the state before the event, like on
	X11. (#169753)

2005-03-29  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtktreemodelfilter.c (gtk_tree_model_filter_set_visible_func): 
	Document the need to refilter if parameters of the visibility function
	change.  (#169516, Olivier Sessink)	

Mon Mar 28 15:13:42 2005  Søren Sandmann  <sandmann@redhat.com>

	* gdk/gdkwindow.c (gdk_window_invalidate_maybe_recurse): Don't
	invalidate areas that are covered by mapped input-output child
	windows. Bug 141380.

2005-03-28  Jeroen Zwartepoorte  <jeroen.zwartepoorte@gmail.com>

	* gtk/gtkfilechooserdefault.c: (update_preview_widget_visibility): Make
	the preview label ellipsize so the dialog layout stays constant.
	(#171398)

2005-03-28  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtktreeview.c (gtk_tree_view_key_press): Don't pop up
	the context menu of the search entry if it is not visible.
	(#169534, Billy Biggs)

2005-03-27  Tor Lillqvist  <tml@novell.com>

	* configure.in: Apparently AC_LIBTOOL_WIN32_DLL isn't deprecated
	after all, and in fact necessary with HEAD libtool.

2005-03-26  Matthias Clasen  <mclasen@redhat.com>

	* gtk/*.c: 
	* gdk/gdkdisplaymanager.c: 
	Use canonical names for g_object_notify() as well. 

2005-03-24  Tor Lillqvist  <tml@novell.com>

	* configure.in (GTK_EXTRA_CFLAGS): Include the -mms-bitfields flag
	in GTK_EXTRA_CFLAGS on Win32, so that it gets included in the
	gtk+-2.0.pc file and automatically used by dependents. MSVC users
	who use pkg-config will have to manually edit it out from
	gtk+-2.0.pc, sorry. Maybe pkg-config should be enhanced to support
	some kind of conditionals in .pc files?

2005-03-23  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkfilechooserbutton.c (update_combo_box): Remove
	a call whose result was unused and leaked.  (#170776,
	Kjartan Maraas)
